fix: navbar on mobile devices

--- a/src/app.scss
+++ b/src/app.scss
@@ -1044,29 +1044,6 @@ header
 		background-color: black;
 	}
 
-	@media (max-width: $full-width)
-	{
-		overflow-x: auto;
-	}
-
-	@media (max-width: $phone-width)
-	{
-		height: 48px;
-		overflow: hidden;
-
-		box-shadow: 0 1px 3px var(--background);
-
-		transition:
-			height 250ms ease,
-			box-shadow 750ms ease;
-
-		&[aria-expanded = "true"], &:focus-within
-		{
-			height: unset; /* set an explicit height for animation */
-
-			box-shadow: 0 0px 12px rgba(black, 0.2);
-		}
-	}
 
 	@supports (backdrop-filter: blur(16px))
 	{
@@ -1101,7 +1078,6 @@ header
 		{
 			height: unset;
 			margin: 8px 0 0 0;
-			flex-direction: column;
 			align-items: flex-start;
 		}
 	}
